# pydaw

./: .gitignore  DEVELOPERS.txt  INSTRUCTIONS.txt  LICENSE  LICENSE.txt  Makefile  PACKAGERS.txt  PHILOSOPHY.txt  README.md  README.txt  build-all.pl  build-lib.pl  compile_and_install.pl  copyright  main.c  new-plugin.pl  rpm.py  src.sh  upload_rpm_and_src.sh
debugger/: Makefile  input_gen.h  main.c
doc/: developers.txt  instructions.txt  packagers.txt
dssi/: Makefile.am  autogen.sh  coding-style.txt  config.status  dssi.pc
dssi/autom4te.cache/: output.1  requests
dssi/doc/: dssi_analyse_plugin.1  dssi_osc_update.1
dssi/examples/: Makefile  Makefile.am  Makefile.in  constants.h  dssi_list_plugins.c  dssi_osc_update  dssi_osc_update.c  synth.la  synth_la-synth.lo  synth_qt_gui.cpp  synth_qt_gui.moc.cpp
dssi/examples/.deps/: LTS_qt-synth_qt_gui.moc.Po  dssi_list_plugins-dssi_list_plugins.Po  dssi_osc_send-dssi_osc_send.Po  dssi_osc_update-dssi_osc_update.Po
dssi/examples/.libs/: synth.la  synth.lai
dssi/examples/libmodsynth/lib/: amp.h  denormal.h  sample_reader.h  smoother-linear.h
dssi/examples/libmodsynth/modules/delay/: convolution_reverb.h  delay.h
dssi/examples/libmodsynth/modules/distortion/: bit-reduce.h  wavetable_shaper.h
dssi/examples/libmodsynth/modules/signal_routing/: audio_xfade.h  crossfade.h
dssi/examples/libmodsynth/widgets/: keyboard.h
dssi/jack-dssi-host/: Makefile
dssi/nbproject/: Package-Default.bash  configurations.xml  project.xml
fedora/: build.py  copy_rpms.py  copy_rpms.sh
function_plotter/: adsr.h  main.c
jack-dssi-host/: Makefile  Makefile.am  autotools_script.sh  build.pl  configure
libmodsynth/: ChangeLog  Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  constants.h  deps-ubuntu.sh  libtool  rebuild.sh  todo.txt
libmodsynth/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libmodsynth/doc/: dssi_list_plugins.1
libmodsynth/examples/: .cvsignore  LTS_qt  Makefile  Makefile.in  dssi_list_plugins  dssi_osc_send  dssi_osc_update  libmodsynth.h  synth.c  synth.la  synth_la-synth.lo  synth_qt_gui.cpp  synth_qt_gui.h  synth_qt_gui.moc.cpp
libmodsynth/jack-dssi-host/: Makefile  Makefile.in  jack-dssi-host
libmodsynth/lib/: amp.h  cc_map.h  denormal.h  fast_sine.h  interpolate-linear.h  lms_math.h  osc_core.h  pitch_core.h  sample_reader.h  sinc_lp_gen.h  smoother-iir.h  smoother-linear.h
libmodsynth/nbproject/: configurations.xml
libmodsynth/tests/: Makefile  Makefile.in
lms-comb/: build.pl
lms-comb/src/: libmodsynth.h  meta.h  synth.c  synth_qt_gui.cpp
lms-filter/: build.pl
lms-filter/src/: Makefile.am  libmodsynth.h  meta.h  synth.c  synth.h  synth_qt_gui.cpp  synth_qt_gui.h
lms_comb/src/: Makefile.am  libmodsynth.h  synth.c  synth.h  synth_qt_gui.h
lms_delay/: build.pl
lms_delay/src/: libmodsynth.h  meta.h  synth.c  synth.h  synth_qt_gui.cpp  synth_qt_gui.h
lms_distortion/src/: libmodsynth.h  meta.h  synth.c  synth.h  synth_qt_gui.cpp  synth_qt_gui.h
lms_dynamics/: build.pl
lms_dynamics/src/: libmodsynth.h  synth.c  synth.h  synth_qt_gui.cpp  synth_qt_gui.h
lms_eq5/src/: libmodsynth.h  meta.h  synth.c  synth.h  synth_qt_gui.cpp  synth_qt_gui.h
lms_filter/src/: synth.h  synth_qt_gui.cpp
lms_reverb/src/: Makefile.am  libmodsynth.h  synth.c  synth.h  synth_qt_gui.cpp
lms_studio/: design_spec.odt
packaging/: README.txt  create_packages.txt  deps-ubuntu.sh  install-plugins-ubuntu.sh  install-qtractor.sh  png2base64enc.php  presets_to_qstring.pl
plugins/: DEPENDENCIES_for_Makefile.txt  Makefile  TODO.txt  build-all.pl  build-lib.pl  configure  cxx2pyqt4.py  daw_design_spec  deb.pl  fedora_users  lms_suite-version.txt  new-plugin.pl  pydaw-version.txt  pydaw2-version.txt  pydaw3-version.txt  src.sh  ubuntu_chroot_install.sh  version.txt
plugins/cc_maps/: Euphoria.pymap  (+6 more)
plugins/euphoria/src/: Makefile  Makefile.am  code_gen.pl  gen_header.pl  libmodsynth.h  main.ui  mainv2.ui  meta.h  ports.h  qtablewidget_schemas.txt  synth.c  synth.h  synth_qt_gui.cpp  synth_qt_gui.h  synth_qt_gui2.h  ui_rework.cpp
plugins/lms_distortion/src/: Makefile  Makefile.am  meta.h  synth.c  synth.h  synth_qt_gui.cpp  synth_qt_gui.h
plugins/pydaw_sbsms/test/src/: Makefile.am  Makefile.in  convert.cpp  mp3.cpp  mp3.h  mp3tech.cpp  real.h
ray-v/: Makefile  Makefile.am  Makefile.am~  Makefile.in  README  TODO.txt  autotools_script.sh  build.pl  config.h  config.h.in  config.status  configure  configure.ac  configure.ac~  deps-ubuntu.sh  description-pak  libmodsynth.h  libmodsynth.h~  libtool  quick_build.sh  rebuild.sh  synth.c  synth.c~  synth.h  synth_qt_gui.cpp  synth_qt_gui.h  synth_qt_gui.moc.cpp
ray-v/.deps/: LMS_qt-synth_qt_gui.Po  dssi_analyse_plugin-dssi_analyse_plugin.Po  dssi_list_plugins-dssi_list_plugins.Po  ray_v_la-synth.Plo
ray-v/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
ray-v/doc/: jack-dssi-host.1
ray-v/examples/: LTS_qt  Makefile  Makefile.am  Makefile.in  dssi_analyse_plugin  dssi_analyse_plugin.c  dssi_list_plugins  dssi_osc_send  dssi_osc_update  ray_v.la  ray_v_la-synth.lo  synth.c
ray-v/examples/.deps/: LMS_qt-synth_qt_gui.Po  LMS_qt-synth_qt_gui.moc.Po  LTS_qt-synth_qt_gui.Po  ray_v_la-synth.Plo  synth_la-synth.Plo
ray-v/examples/.libs/: ray_v.la  ray_v.lai
ray-v/examples/libmodsynth/lib/: pitch_core.h
ray-v/examples/libmodsynth/modules/filter/: eq_biquad.h
ray-v/examples/libmodsynth/modules/oscillator/: noise.h
ray-v/examples/libmodsynth/modules/signal_routing/: switch.h
ray-v/jack-dssi-host/: Makefile  Makefile.am  Makefile.in  jack-dssi-host
ray-v/nbproject/: Package-Default.bash
ray-v/src/: Makefile.am  libmodsynth.h  synth.c  synth.h  synth_qt_gui.cpp
ray-v/tests/: Makefile
ray_v/: build.pl
src/: Makefile  README_ARM.txt  build-lib.pl  deb.pl  deb.py  deps_ubuntu.sh  fedora_deps.sh  fedora_users  gdb-fix.sh  install_deb.sh  loc.sh  minor-version.txt  pydaw3-version.txt  pydaw4-version.txt  ubuntu_deps.sh  upload_deb.sh
src/pydaw_sbsms/cli/src/: Makefile.am  Makefile.in  convert.cpp
(+666 files in other folders)
